overflow-x mobile fix

--- a/src/app.scss
+++ b/src/app.scss
@@ -13,8 +13,12 @@
 
 html{
     font-size: 62.5%;
-    overflow-x: hidden;
     max-width: 100vw;
+    overflow-x: hidden;
+}
+
+body{
+    overflow-x: hidden;
 }
 
 .App {
