--- a/src/components/background/index.scss
+++ b/src/components/background/index.scss
@@ -4,4 +4,5 @@
     background-color: #000000;
     position: absolute;
     z-index: -1;
+    overflow-x: hidden;
 }
